[package]
name = "glv-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mybin"
path = "bin/ex.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = "0.5.0-alpha.0"
ark-ec = "0.5.0-alpha.0"
ark-ff = "0.5.0-alpha.0"
ark-std = "0.5.0-alpha.0"
num-bigint = "0.4.6"
num-integer = "0.1.46"
num-traits = "0.2.19"
rand = "0.8.5"
blstrs = "0.7.1"
ff = "0.13.0"
group = "0.13.0"

[dev-dependencies]
criterion = "0.5.1"
proptest = "1.5.0"

[[bench]]
name = "my_benchmark"
harness = false
